# copilot-cli-for-beginners-mnh

./: .gitignore  CONTRIBUTING.md
.copilot-track/crawl/: README.md
.github/: pull_request_template.md  uvs.csv  views.csv
.github/workflows/: book-app-ci.yml
00-quick-start/: README.md
01-setup-and-first-steps/: README.md
02-context-conversations/: README.md
04-agents-custom-instructions/: README.md
ai-track-docs/: BACKLOG-EX12-WALK.md  BACKLOG-EX12.md  SYSTEM-OVERVIEW.md  ai-review-checklist.md  architecture.mmd  backlog-run-ex12.md  build-test.md  ci-reliability.md  ci.md  contract-tests.md  coverage.md  delegation-checklist.md  dependencies.md  evidence-guide.md  extending-books.md  feature-flags.md  logging.md  perf-baseline.md  pr-hygiene.md  resilience.md  security.md  static-analysis.md  subsystem-book-app.md  walk-onboarding.md
samples/book-app-project/: .coverage  bench_find.py  book_app.py  books.py  data.json  pyproject.toml  run-tests.ps1  utils.py
samples/book-app-project/book_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
samples/book-app-project/tests/: test_books.py  test_feature_flags.py  test_hardening_flags.py  test_resilience.py
