[project]
name = "book-app"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["pytest>=9.0.3,<10"]

[project.optional-dependencies]
dev = ["ruff>=0.15,<1", "pytest-cov>=7.1,<8", "bandit>=1.9,<2"]

[tool.setuptools]
py-modules = ["book_app", "books", "utils"]

[tool.pytest.ini_options]
addopts = "--cov=. --cov-report=term-missing"

[tool.bandit]
# B101 (assert_used): all assert statements in this project live in pytest test files;
# assert is the standard pytest assertion pattern and carries no production risk.
# exclude_dirs is intentionally omitted so bandit scans test files for all other
# security issues (injection, unsafe calls, etc.) — only asserts are suppressed.
skips = ["B101"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
