[project]
name = "book-app"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["pytest>=9.0,<10"]

[project.optional-dependencies]
dev = ["ruff>=0.4,<1", "pytest-cov>=5.0,<8"]

[tool.pytest.ini_options]
addopts = "--cov=. --cov-report=term-missing"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
