[project]
name = "book-app"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["pytest>=9.0,<10"]

[project.optional-dependencies]
dev = ["ruff>=0.4,<1", "pytest-cov>=5.0,<8", "bandit>=1.7,<2"]

[tool.setuptools]
py-modules = ["book_app", "books", "utils"]

[tool.pytest.ini_options]
addopts = "--cov=. --cov-report=term-missing"

[tool.bandit]
# B101 (assert_used): all assert statements in this project live in pytest test files;
# assert is the standard pytest assertion pattern and carries no production risk.
skips = ["B101"]
exclude_dirs = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
